syntax = "proto3";
package intkey;

enum Verb {
  INSERT = 0;
  UPSERT = 1;
  DELETE = 2;
  INCREMENT = 3;
  DECREMENT = 4;
}

message IntKeyState {
  string name = 1;
  uint64 value = 2;
}

message IntKeyPayload {
  Verb verb = 1;
  string name = 2; /* Max 20 character */
  uint64 value = 3; /* 2^64 - 1 */
}